; ModuleID = '/home/carl/AnghaBench/reactos/modules/rostests/winetests/comctl32/extr_treeview.c_test_WM_GETDLGCODE.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rostests/winetests/comctl32/extr_treeview.c_test_WM_GETDLGCODE.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@WM_GETDLGCODE = common dso_local global i32 0, align 4
@VK_TAB = common dso_local global i32 0, align 4
@DLGC_WANTCHARS = common dso_local global i32 0, align 4
@DLGC_WANTARROWS = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [8 x i8] c"0x%08x\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @test_WM_GETDLGCODE to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @test_WM_GETDLGCODE() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i32, align 4
  %3 = call i32 @create_treeview_control(i32 0)
  store i32 %3, i32* %2, align 4
  %4 = load i32, i32* %2, align 4
  %5 = load i32, i32* @WM_GETDLGCODE, align 4
  %6 = load i32, i32* @VK_TAB, align 4
  %7 = call i32 @SendMessageA(i32 %4, i32 %5, i32 %6, i32 0)
  store i32 %7, i32* %1, align 4
  %8 = load i32, i32* %1, align 4
  %9 = load i32, i32* @DLGC_WANTCHARS, align 4
  %10 = load i32, i32* @DLGC_WANTARROWS, align 4
  %11 = or i32 %9, %10
  %12 = icmp eq i32 %8, %11
  %13 = zext i1 %12 to i32
  %14 = load i32, i32* %1, align 4
  %15 = call i32 @ok(i32 %13, i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str, i64 0, i64 0), i32 %14)
  %16 = load i32, i32* %2, align 4
  %17 = call i32 @DestroyWindow(i32 %16)
  ret void
}

declare dso_local i32 @create_treeview_control(i32) #1

declare dso_local i32 @SendMessageA(i32, i32, i32, i32) #1

declare dso_local i32 @ok(i32, i8*, i32) #1

declare dso_local i32 @DestroyWindow(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
